Fix layout issues

--- a/public/css/content_recommender.css
+++ b/public/css/content_recommender.css
@@ -61,6 +61,7 @@ td {
 /* Recommendations */
 .recommendInfo {
 	font-style: italic;
+	margin: 10px;
 }
 
 .recommendInfo .glyphicon {
